# computer_graphics-hw4

./: CMakeLists.txt  README.md
src/: flatshading.cpp  frame_timer.cpp  gouraudshading.cpp  light.h  load_mesh.cpp  main.cpp  phongshading.cpp  scene.h  shade.h  transformation.h  unshaded.cpp
